# clox-cpp

./: .gitignore  CMakeLists.txt  build-asan.sh  build.sh  chunk.cpp  chunk.h  common.h  compile.cpp  compile.h  compiler.cpp  compiler.h  debug.cpp  debug.h  main.cpp  runtestcases.sh  scanner.cpp  scanner.h  testcases.sh  value.cpp  value.h  vm.cpp  vm.h
.cache/clangd/index/: chunk.cpp.3AA8111DD40D0578.idx  chunk.h.D301CD023BE1E1B9.idx  common.h.99B1030F5C3602CA.idx  debug.cpp.47BA50D6A087BFB8.idx  debug.h.2F9E8943490C7A1C.idx  main.cpp.1BA4901F6DE22ABF.idx  value.cpp.104F526E176502BA.idx  value.h.CEF0550C406E79CF.idx  vm.h.C44B73D338EF6F13.idx
t/: comment.lox
